add sticky footer to main page and other pages

--- a/themes/hugo-creative-theme/layouts/partials/credits.html
+++ b/themes/hugo-creative-theme/layouts/partials/credits.html
@@ -1,5 +1,5 @@
 {{ "<!-- CREDITS -->" | safeHTML }}
-<div class="gopher-container">
+<footer class="gopher-footer">
   <section class="bg-primary" id="credits">
       <div class="container">
           <div class="row">
@@ -20,4 +20,4 @@
           </div>
       </div>
   </section>
-</div>
+</footer>
