--- a/themes/hugo-creative-theme/static/css/creative.css
+++ b/themes/hugo-creative-theme/static/css/creative.css
@@ -7,11 +7,17 @@
 html,
 body {
     width: 100%;
-    height: 100%;
+}
+
+html {
+  position: relative;
+  min-height: 100%;
 }
 
 body {
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
+    height: 100%;
+    margin-bottom: 196px;
 }
 
 hr {
@@ -99,8 +105,7 @@ figure.twitter-logo img {
 
 h2.article-title {
   font-family: Merriweather,'Helvetica Neue',Arial,sans-serif;
-  color: #e84661;
-  font-weight: 700;
+  font-weight: 400;
   text-align: center;
 }
 
@@ -163,10 +168,11 @@ img.speaker-img-responsive {
   min-height: 100%;
 }
 
-.credit-footer {
+.gopher-footer {
   position: absolute;
   bottom: 0;
   width: 100%;
+  height: 196px;
 }
 
 .small-text {
