Add speaker: Dave Cheney

--- a/themes/hugo-creative-theme/layouts/speakers/single.html
+++ b/themes/hugo-creative-theme/layouts/speakers/single.html
@@ -2,6 +2,7 @@
 {{ partial "nav.html" . }}
 <article class="container article">
   <h2 class="article-title">{{ .Title }}</h2>
+  <hr>
   <div class="article-body" itemprop="articleBody">
     <div class="speakers-list">
       {{ range .Site.Params.speakers }}
@@ -10,8 +11,8 @@
           <img src="../../img/{{ .profile }}" class="speaker-img-responsive" alt="{{ .name }}">
         </div>
         <div class="speaker-content">
-          <div class="speaker-name">{{ .name }}</div>
-          <div class="speaker-company">{{ .company }}</div>
+          <div class="speaker-name"><a href="{{ .brand }}">{{ .name }}</a></div>
+          <div class="speaker-caption">{{ .caption }}</div>
           <div class="speaker-bio">{{ .bio }}</div>
           <div class="speaker-talk-link"><a href="#">{{ .talk }}</a></div>
         </div>
