--- a/themes/hugo-creative-theme/layouts/speakers/single.html
+++ b/themes/hugo-creative-theme/layouts/speakers/single.html
@@ -1,26 +1,36 @@
 {{ partial "default_head.html" . }}
 {{ partial "nav.html" . }}
-<article class="container article">
-  <h2 class="article-title">{{ .Title }}</h2>
-  <hr>
-  <div class="article-body" itemprop="articleBody">
-    <div class="speakers-list">
-      {{ range .Site.Params.speakers }}
-      <div class="speaker">
-        <div class="speaker-img">
-          <img src="../../img/{{ .profile }}" class="speaker-img-responsive" alt="{{ .name }}">
-        </div>
-        <div class="speaker-content">
-          <div class="speaker-name"><a href="{{ .brand }}">{{ .name }}</a></div>
-          <div class="speaker-caption">{{ .caption }}</div>
-          <div class="speaker-bio">{{ .bio }}</div>
-          <div class="speaker-talk-link"><a href="#">{{ .talk }}</a></div>
+
+<div class="container-fluid">
+  <div class="row">
+    <article class="container-fluid article">
+      <h2 class="article-title">{{ .Title }}</h2>
+      <hr>
+      <div class="article-body" itemprop="articleBody">
+        <div class="speakers-list">
+          {{ range .Site.Params.speakers }}
+          <div class="speaker">
+
+            <div class="col-lg-2 col-md-4 col-sm-4 col-xs-12">
+              <div class="speaker-img">
+                <img src="../../img/{{ .profile }}" class="speaker-img-responsive" alt="{{ .name }}">
+              </div>
+            </div>
+            <div class="col-lg-10 col-md-8 col-sm-8 col-xs-12">
+              <div class="speaker-content">
+                <div class="speaker-name"><a href="{{ .brand }}">{{ .name }}</a></div>
+                <div class="speaker-caption">{{ .caption }}</div>
+                <div class="speaker-bio">{{ .bio }}</div>
+                <div class="speaker-talk-link"><a href="#">{{ .talk }}</a></div>
+              </div>
+            </div>
+          </div>
+          {{ end }}
         </div>
       </div>
-      {{ end }}
-    </div>
+    </article>
   </div>
-</article>
+</div>
 
 {{ partial "credits.html" . }}
 
