--- a/themes/hugo-creative-theme/static/css/creative.css
+++ b/themes/hugo-creative-theme/static/css/creative.css
@@ -307,15 +307,21 @@ img.speaker-img-responsive {
     }
 
     .speaker-img {
-      width: 120px;
-      height: 120px;
-      margin: 0 1.5em 1.2em 0;
+      width: 170px;
+      height: 170px;
+      margin: 20px auto;
     }
 
     .speaker-content {
       max-width: 100%;
+      text-align: justify;
       -ms-flex: 0 0 start;
           flex: 0 0 start;
+    }
+
+    .speaker-name a {
+      text-align: center;
+      display: block;
     }
 }
 
