--- a/themes/hugo-creative-theme/static/css/creative.css
+++ b/themes/hugo-creative-theme/static/css/creative.css
@@ -117,7 +117,7 @@ h2.article-title {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: flex-start;
-  margin: 0 0 2em 0;
+  padding-top: 55px;
 }
 
 .speaker-img {
@@ -302,6 +302,8 @@ img.speaker-img-responsive {
     }
 
     .speaker {
+      display: block;
+      margin: 0 auto;
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
     }
@@ -309,12 +311,13 @@ img.speaker-img-responsive {
     .speaker-img {
       width: 170px;
       height: 170px;
-      margin: 20px auto;
+      margin: 0 auto 20px auto;
     }
 
     .speaker-content {
       max-width: 100%;
       text-align: justify;
+      margin-bottom: 50px;
       -ms-flex: 0 0 start;
           flex: 0 0 start;
     }
