update layout of workshop

--- a/themes/hugo-creative-theme/layouts/partials/credits.html
+++ b/themes/hugo-creative-theme/layouts/partials/credits.html
@@ -3,7 +3,7 @@
   <section class="bg-primary" id="credits">
       <div class="container">
           <div class="row">
-              <div class="col-lg-6 text-left">
+              <div class="col-md-6 text-left">
                   {{ with .Site.Params.credits.headline }}
                       <h2 class="section-heading">{{ . }}</h2>
                   {{ end }}
@@ -13,12 +13,12 @@
                   <a class="social-links" href="https://twitter.com/gopherconsg" target="_blank">
                     <p class="text-faded">
                       <i class="fa fa-twitter fa-lg" aria-hidden="true"></i>
-                    </p>  
+                    </p>
                   </a>
                   <a class="social-links" href="https://www.facebook.com/GopherConSG" target="_blank">
                     <p class="text-faded">
                       <i class="fa fa-facebook fa-lg" aria-hidden="true"></i>
-                    </p>  
+                    </p>
                   </a>
                   {{ with .Site.Params.credits.description }}
                     <a href="mailto:hello@gophercon.sg">
