--- a/themes/hugo-creative-theme/layouts/workshop/single.html
+++ b/themes/hugo-creative-theme/layouts/workshop/single.html
@@ -29,6 +29,9 @@
                   </div>
                   <div class="location-address">{{ .Site.Params.workshop.venue }}<br> <i>{{ .Site.Params.workshop.venueinfo }}</i></div>
                 </div>
+                <div class="location-map">
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1994.408775532115!2d103.84810964573856!3d1.2833264075290443!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da190c75d0dc05%3A0xa48859b016c0afdd!2sAmazon+Web+Services!5e0!3m2!1sen!2ssg!4v1486886392152" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+                </div>
               </div>
               <div class="timeline-sub-block">
                 <h4 class="timeline-sub-block-header">About the instructor: </h4>
