--- a/themes/hugo-creative-theme/layouts/workshop/single.html
+++ b/themes/hugo-creative-theme/layouts/workshop/single.html
@@ -57,7 +57,7 @@
 
             </div>
           </div>
-        </div>
+        </div> <!-- timeline -->
       </div>
       {{ end }}
     </article>
