--- a/themes/hugo-creative-theme/layouts/partials/nav.html
+++ b/themes/hugo-creative-theme/layouts/partials/nav.html
@@ -25,7 +25,7 @@
                     <li>
                         <a href="/workshop">{{ .Site.Params.navigation.links.workshop }}</a>
                     </li>
-                {{ if and .Site.Params.talks .Site.Params.navigation.links.talks }}
+                {{ if and .Site.Params.conference .Site.Params.navigation.links.talks }}
                     <li><a href="/talks">Talks</a></li>
                 {{ end }}
 
