--- a/themes/hugo-creative-theme/layouts/talks/single.html
+++ b/themes/hugo-creative-theme/layouts/talks/single.html
@@ -7,24 +7,34 @@
       <h2 class="article-title">{{ .Title }}</h2>
       <hr>
       <div class="schedule-date-block">
-        {{ with .Site.Params.talks.date }}
+        {{ with .Site.Params.conference.date }}
         <div class="schedule-day">{{ . }}</div>
         {{ end }}
         <hr>
-        <div class="schedule-event">{{ .Site.Params.talks.type }}</div>
+        <div class="schedule-event">{{ .Site.Params.conference.type }}</div>
       </div>
       <div class="article-body" itemprop="articleBody">
         <div class="timeline">
-          {{ range .Site.Params.talks }}
+        {{ range .Site.Params.conference.talks }}
           <div class="timeline-block clearfix">
             <div class="timeline-point"></div>
-            <div class="timeline-time col-xs-3 col-md-2">test</div>
+            <div class="timeline-time col-xs-3 col-md-2">{{ .timerange }}</div>
             <div class="timeline-event col-xs-9 col-md-10">
               <h4 class="{{ .class }}">{{ .title }}</h4>
-              <div>
-                  <p>Talk content</p>
-              </div>
+              <div class="talk-block">
 
+              {{ if and .profile .name }}
+              <div class="speaker-block">
+                <div class="speaker-img-xs">
+                  <img src="../../img/{{ .profile }}" class="speaker-img-responsive center-block" alt="{{ .name }}">
+                </div>
+                <div class="speaker-bio-link"><a href="">{{ .name }}</a></div>
+              </div>
+              {{ end }}
+
+
+
+              </div>
             </div>
           </div>
           {{ end }}
