--- a/themes/hugo-creative-theme/layouts/talks/single.html
+++ b/themes/hugo-creative-theme/layouts/talks/single.html
@@ -22,18 +22,18 @@
             <div class="timeline-event col-xs-9 col-md-10">
               <h4 class="{{ .class }}">{{ .title }}</h4>
               <div class="talk-block">
-
-              {{ if and .profile .name }}
-              <div class="speaker-block">
-                <div class="speaker-img-xs">
-                  <img src="../../img/{{ .profile }}" class="speaker-img-responsive center-block" alt="{{ .name }}">
+                {{ if and .profile .name }}
+                <div class="speaker-block">
+                  <div class="speaker-img-xs">
+                    <img src="../../img/{{ .profile }}" class="speaker-img-responsive center-block" alt="{{ .name }}">
+                  </div>
+                  <div class="speaker-bio-link"><a href="">{{ .name }}</a></div>
                 </div>
-                <div class="speaker-bio-link"><a href="">{{ .name }}</a></div>
-              </div>
-              {{ end }}
+                {{ end }}
 
-
-
+                {{ with .talk }}
+                <p class="text-muted">{{ . | markdownify }}</p>
+                {{ end }}
               </div>
             </div>
           </div>
