--- a/themes/hugo-creative-theme/layouts/partials/partners.html
+++ b/themes/hugo-creative-theme/layouts/partials/partners.html
@@ -11,14 +11,19 @@
                 {{ end }}
             </div>
             <div class="sponsor-logos">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h3>Gold Sponsors</h3>
-                </div>
-                <div class="col-lg-12 col-md-12 text-center">
-                    <img class="img-responsive gold-sponsor-logos" src="../../img/thoughtworks_logo.png" />
+                <div class="gold-sponsor-logos-row">
+                    <div class="text-center">
+                        <h3>Gold Sponsors</h3>
+                    </div>
+                    <div class="col-lg-6 col-md-6 text-center">
+                        <img class="img-responsive gold-sponsor-logos" src="../../img/thoughtworks_logo.png" />
+                    </div>
+                    <div class="col-lg-6 col-md-6 text-center">
+                        <img class="img-responsive gold-sponsor-logos" src="../../img/singapore_power_logo.png" />
+                    </div>
                 </div>
             </div>
-            <div class="col-lg-8 col-lg-offset-2 text-center">
+            <div class="sponsor-invite-text col-lg-8 col-lg-offset-2 text-center">
                 {{ with .Site.Params.partners.description }}
                     <p>{{ . | markdownify }}</p>
                 {{ end }}
