Added speaker + talk data
Some questions remain:
- How to add multi-line text in config
- Should we actually use the config for data (seems counter intuitive)?
- Should change the id of speaker (in params.speakers.<speakerID>).
  This seems to be lexically sorted, so "speaker10" comes before
"speaker2"

--- a/themes/hugo-creative-theme/layouts/speakers/single.html
+++ b/themes/hugo-creative-theme/layouts/speakers/single.html
@@ -23,7 +23,12 @@
                 {{ with .bio }}
                   <div class="speaker-bio">{{ . | markdownify }}</div>
                 {{ end }}
-                <div class="speaker-talk-link"><a href="#">{{ .talk }}</a></div>
+                <div class="speaker-talk">
+                  <h3>{{ .title }}</h3>
+                  <div class="speaker-talk-abstract">
+                    <p>{{ .abstract }}</p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
