--- a/themes/hugo-creative-theme/layouts/partials/credits.html
+++ b/themes/hugo-creative-theme/layouts/partials/credits.html
@@ -26,7 +26,7 @@
                     </a>
                   {{ end }}
                   <div class="credit-text medium-text">&copy Copyright GopherCon.SG 2017</a></div>
-                  <div class="credit-text small-text">The Gopher character is based on the Go mascot designed by Renee French and copyrighted under the <a href="https://creativecommons.org/licenses/by/3.0/us/">Creative Commons Attribution 3.0 license.</a></div>
+                  <div class="credit-text small-text">The Gopher character is based on the Go mascot designed by Renee French and licensed under <a rel="license" href="http://creativecommons.org/licenses/by/3.0/us/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/us/80x15.png" /></a></div>
               </div>
           </div>
       </div>
