Removing orphaned anchor tag

--- a/themes/hugo-creative-theme/layouts/partials/credits.html
+++ b/themes/hugo-creative-theme/layouts/partials/credits.html
@@ -25,7 +25,7 @@
                         <p class="text-faded">{{ . | markdownify }}</p>
                     </a>
                   {{ end }}
-                  <div class="credit-text medium-text">&copy Copyright GopherCon.SG 2017</a></div>
+                  <div class="credit-text medium-text">&copy Copyright GopherCon.SG 2017</div>
                   <div class="credit-text small-text">The Gopher character is based on the Go mascot designed by Renee French and copyrighted under the <a href="https://creativecommons.org/licenses/by/3.0/us/">Creative Commons Attribution 3.0 license.</a></div>
               </div>
           </div>
