update speakers & talks page

--- a/themes/hugo-creative-theme/static/css/creative.css
+++ b/themes/hugo-creative-theme/static/css/creative.css
@@ -155,7 +155,7 @@ img.img-responsive.gold-sponsor-logos {
   height: 170px;
   border-radius: 50%;
   overflow: hidden;
-  margin: 0 1.5em 0 0;
+  margin: 0 auto;
 }
 
 .speaker-img-xs {
@@ -178,24 +178,25 @@ img.speaker-img-responsive {
 .speaker-name a {
   font-family: Merriweather,'Helvetica Neue',Arial,sans-serif;
   font-weight: 700;
-  font-size: 26px;
+  font-size: 1.5em;
   color: #1da79d;
   padding-bottom: 0.5em;
 }
 
 .speaker-caption {
   color: #7e7e7e;
-  font-size: 18px;
+  font-size: 1.2em;
   padding-bottom: 0.5em;
 }
 
 .speaker-bio {
   padding-bottom: 0.5em;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 .speaker-talk-link a {
-  text-decoration: underline;
+  text-decoration: none;
+  font-size: 1.4em;
   color: #2a70c6;
 }
 
@@ -203,6 +204,11 @@ img.speaker-img-responsive {
   text-decoration: underline;
   color: #2a70c6;
   font-size: 1em;
+}
+
+.keynote-tag {
+  font-size: 1.1em;
+  color: #a69225;
 }
 
 .single {
@@ -308,8 +314,9 @@ h4.timeline-sub-block-header {
   margin: 2em 0 0.8em 0;
 }
 
-.talk-block {
-
+.talk-block p.text-muted {
+  padding-top: 1em;
+  margin: 0;
 }
 
 .location-block {
@@ -513,17 +520,21 @@ h4.timeline-sub-block-header {
 
     .speaker-content {
       max-width: 100%;
-      text-align: justify;
       margin-bottom: 50px;
       -ms-flex: 0 0 start;
         -webkit-box-flex: 0;
           flex: 0 0 start;
     }
 
-    .speaker-name a {
+    .speaker-name a, .keynote-tag, .speaker-caption {
       text-align: center;
       display: block;
     }
+
+    .keynote-tag, .speaker-caption {
+      padding-bottom: 0.5em;
+    }
+
 }
 
 .cover-img {
