--- a/themes/hugo-creative-theme/static/css/creative.css
+++ b/themes/hugo-creative-theme/static/css/creative.css
@@ -159,8 +159,8 @@ img.img-responsive.gold-sponsor-logos {
 }
 
 .speaker-img-xs {
-  width: 90px;
-  height: 90px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
   overflow: hidden;
   margin: 0 1.5em 0 0;
@@ -315,7 +315,7 @@ h4.timeline-sub-block-header {
 }
 
 .talk-block p.text-muted {
-  padding-top: 1em;
+  padding-bottom: 1em;
   margin: 0;
 }
 
