Update SP logo and Fix UI

--- a/themes/hugo-creative-theme/layouts/partials/partners.html
+++ b/themes/hugo-creative-theme/layouts/partials/partners.html
@@ -12,7 +12,7 @@
             </div>
             <div class="sponsor-logos">
                 <div class="gold-sponsor-logos-row">
-                    <div class="text-center">
+                    <div class="sponsor-text text-center">
                         <h3>Gold Sponsors</h3>
                     </div>
                     <div class="col-lg-6 col-md-6 text-center">
