Add dgraph logo

--- a/themes/hugo-creative-theme/static/css/creative.css
+++ b/themes/hugo-creative-theme/static/css/creative.css
@@ -108,20 +108,33 @@ h2.article-title {
 }
 
 .gold-sponsor-logos-row {
-  margin-top: 80px;
   min-height: 120px;
 }
 
 .sponsor-text {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 
 img.img-responsive.gold-sponsor-logos {
   display: block;
   width: auto;
+  min-width: 380px;
+  height: 150px;
+  margin: 0 auto;
+}
+
+img.img-responsive.silver-sponsor-logos {
+  display: block;
+  width: auto;
   min-width: 350px;
+  max-width: 350px;
   height: 120px;
   margin: 0 auto;
+}
+
+.sponsor-row {
+  margin-top: 140px;
+  margin-bottom: 160px;
 }
 
 .sponsor-invite-text {
@@ -130,11 +143,6 @@ img.img-responsive.gold-sponsor-logos {
 
 #partners {
   background: #EDEDED;
-}
-
-.sponsor-logos {
-  margin-top: 100px;
-  margin-bottom: 30px;
 }
 
 .speaker {
