Add google sponsor logo

--- a/themes/hugo-creative-theme/layouts/partials/partners.html
+++ b/themes/hugo-creative-theme/layouts/partials/partners.html
@@ -30,6 +30,14 @@
                         <img class="img-responsive silver-sponsor-logos" src="../../img/dgraph_logo.svg" />
                     </div>
                 </div>
+                <div class="venue-sponsor-logos-row sponsor-row">
+                    <div class="sponsor-text text-center">
+                        <h3>Venue Sponsors</h3>
+                    </div>
+                    <div class="col-lg-12 col-md-12 text-center">
+                        <img class="img-responsive venue-sponsor-logos" src="../../img/google_logo.png" />
+                    </div>
+                </div>
 
             </div>
             <div class="sponsor-invite-text col-lg-8 col-lg-offset-2 text-center">
