Add carousell sponsorship logo

--- a/themes/hugo-creative-theme/layouts/partials/partners.html
+++ b/themes/hugo-creative-theme/layouts/partials/partners.html
@@ -26,9 +26,13 @@
                     <div class="sponsor-text text-center">
                         <h3>Silver Sponsors</h3>
                     </div>
-                    <div class="col-lg-12 col-md-12 text-center">
+                    <div class="col-lg-6 col-md-6 text-center">
                         <img class="img-responsive silver-sponsor-logos" src="../../img/dgraph_logo.svg" />
                     </div>
+                    <div class="col-lg-6 col-md-6 text-center">
+                        <img class="img-responsive silver-sponsor-logos" src="../../img/carousell_logo.png" />
+                    </div>
+ 
                 </div>
                 <div class="venue-sponsor-logos-row sponsor-row">
                     <div class="sponsor-text text-center">
