--- a/themes/hugo-creative-theme/static/css/creative.css
+++ b/themes/hugo-creative-theme/static/css/creative.css
@@ -883,7 +883,7 @@ fieldset[disabled] .btn-primary.active {
         flex-wrap: wrap;
 }
 
-.btns-list > a {
+.btns-list > a:not(:first-child) {
     margin-left: 20px;
 }
 
