Clean up logo and text alignment

--- a/themes/hugo-creative-theme/layouts/partials/partners.html
+++ b/themes/hugo-creative-theme/layouts/partials/partners.html
@@ -44,7 +44,7 @@
                 </div>
 
             </div>
-            <div class="sponsor-invite-text col-lg-8 col-lg-offset-2 text-center">
+            <div class="sponsor-invite-text text-center">
                 {{ with .Site.Params.partners.description }}
                     <p>{{ . | markdownify }}</p>
                 {{ end }}
