add support for multiple speakers

--- a/themes/hugo-creative-theme/layouts/talks/single.html
+++ b/themes/hugo-creative-theme/layouts/talks/single.html
@@ -34,9 +34,16 @@
                   <div class="speaker-bio-link"><a href="/speakers/#{{ .fragmentid }}">{{ .name }}</a></div>
                 </div>
                 {{ end }}
+                <div class="speaker-block">
                 {{ range .speakers }}
-                  <p>{{ .profile }}</p>
+                  <div class="speaker-mul">
+                  <div class="speaker-img-xs">
+                    <img src="../../img/{{ .profile }}" class="speaker-img-responsive center-block" alt="{{ .name }}">
+                  </div>
+                  <div class="speaker-bio-link"><a href="/speakers/#{{ .fragmentid }}">{{ .name }}</a></div>
+                  </div>
                 {{ end }}
+                </div>
               </div>
             </div>
           </div>
