--- a/themes/hugo-creative-theme/layouts/partials/partners.html
+++ b/themes/hugo-creative-theme/layouts/partials/partners.html
@@ -10,11 +10,8 @@
                     <hr class="primary">
                 {{ end }}
             </div>
-            <div class="sponsor-logos">
-                <div class="gold-sponsor-logos-row sponsor-row">
-                    <div class="sponsor-text text-center">
-                        <h3>Gold Sponsors</h3>
-                    </div>
+            <div class="sponsor-logos clearfix">
+                <div class="gold-sponsor-logos-row sponsor-row clearfix">
                     <div class="col-lg-6 col-md-6 text-center">
                         <img class="img-responsive gold-sponsor-logos" src="../../img/thoughtworks_logo.png" />
                     </div>
@@ -22,10 +19,7 @@
                         <img class="img-responsive gold-sponsor-logos" src="../../img/singapore_power_logo.png" />
                     </div>
                 </div>
-                <div class="silver-sponsor-logos-row sponsor-row">
-                    <div class="sponsor-text text-center">
-                        <h3>Silver Sponsors</h3>
-                    </div>
+                <div class="silver-sponsor-logos-row sponsor-row clearfix">
                     <div class="col-lg-6 col-md-6 text-center">
                         <img class="img-responsive silver-sponsor-logos" src="../../img/dgraph_logo.svg" />
                     </div>
@@ -34,10 +28,7 @@
                     </div>
  
                 </div>
-                <div class="venue-sponsor-logos-row sponsor-row">
-                    <div class="sponsor-text text-center">
-                        <h3>Venue Sponsors</h3>
-                    </div>
+                <div class="venue-sponsor-logos-row sponsor-row clearfix">
                     <div class="col-lg-12 col-md-12 text-center">
                         <img class="img-responsive venue-sponsor-logos" src="../../img/google_logo.png" />
                     </div>
