--- a/themes/hugo-creative-theme/static/css/creative.css
+++ b/themes/hugo-creative-theme/static/css/creative.css
@@ -111,10 +111,18 @@ h2.article-title {
   margin-bottom: 30px;
 }
 
+img.img-responsive.platinum-sponsor-logos {
+  display: block;
+  width: auto;
+  max-width: 280px;
+  height: auto;
+  margin: 0 auto;  
+}
+
 img.img-responsive.gold-sponsor-logos {
   display: block;
   width: auto;
-  max-width: 350px;
+  max-width: 250px;
   height: auto;
   margin: 10px auto;
 }
@@ -122,7 +130,7 @@ img.img-responsive.gold-sponsor-logos {
 img.img-responsive.silver-sponsor-logos {
   display: block;
   width: auto;
-  max-width: 220px;
+  max-width: 180px;
   height: auto;
   margin: 10px auto;
 }
@@ -130,13 +138,30 @@ img.img-responsive.silver-sponsor-logos {
 img.img-responsive.venue-sponsor-logos {
   display: block;
   width: auto;
-  max-width: 300px;
+  max-width: 200px;
   height: auto;
   margin: 0 auto;
 }
 
+.img-svg {
+  width: 180px;
+}
+
 .sponsor-row {
+  display: -ms-flexbox;
+  display: -webkit-box;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  justify-content: center;
+  -ms-flex-align: center;
+  -webkit-box-align: center;
+    align-items: center;        
   margin-top: 2em;
+}
+
+.sponsor-row div:not(:last-child) {
+  margin-right: 1.2em;
 }
 
 .sponsor-invite-text {
