Fixing case of one talk, 2 speakers
Implementation: define talkid for talks with more than 1 speaker, and
use that as an anchor for navigation

--- a/themes/hugo-creative-theme/layouts/speakers/single.html
+++ b/themes/hugo-creative-theme/layouts/speakers/single.html
@@ -28,7 +28,10 @@
                   <div class="speaker-bio">{{ . | markdownify }}</div>
                 {{ end }}
                 <div class="speaker-talk-link">
-                  <a href="/talks/#{{ .fragmentid }}">{{ .title }}</a>
+                    <a href="/talks/#{{ if .talkid }}{{ .talkid  }}
+                    {{ else }}{{ .fragmentid }}{{ end }}">
+                        {{ .title }}
+                    </a>
                   <div class="speaker-talk-abstract">
                     <p>{{ .abstract }}</p>
                   </div>
