--- a/themes/hugo-creative-theme/layouts/partials/hero.html
+++ b/themes/hugo-creative-theme/layouts/partials/hero.html
@@ -4,7 +4,7 @@
         <div class="header-content-inner">
             <h3 class="cover-title">The first and largest Go conference in Southeast Asia!</h3>
             <div class="cover-img">
-              <img class="img-responsive" src="../../img/gopher_merlion_2017.png" />
+              <img class="img-responsive" src="../../img/gopherconsg.svg" alt="GopherCon Singapore" width="450" height="450">
             </div>
             <h2 class="cover-subtitle">25 - 26 May 2017</h2>
             {{ if and .Site.Params.hero.slogan .Site.Params.hero.subtitle }}
